# plexr

./: README.md  setup.py
CXX/: CMakeLists.txt  CMakeLists.txt.in  plxrConfig.h.in
CXX/src/: plxr.cxx  plxr.h
CXX/test/: test_write_read.cxx
plxr/: __init__.py
python/: Makefile  README.md  setup.py
python/plxr/: __init__.py
python/plxr/tests/: test_cli.py  test_matplotlib_write_read_png.py  test_write_read_png.py  test_write_read_png_hl.py
python/scripts/: bpix  bpix.py  bpmerge  bpview  plxr
scripts/: bpview
test/pandas/: read_simple.py  write_simple.py
